<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D41010"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ZodiacResult">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="281dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="125dp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/scope_one"
            android:text="@string/chinese_zodiac1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/zodiacImage"
        android:layout_width="347dp"
        android:layout_height="213dp"
        android:contentDescription="@string/zodiacImage"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/zodiacName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/scope_one"
        android:text="ZODIAC NAME"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/back"
        android:textColor="#FFFFFF" />

</LinearLayout>