<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D41010"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="125dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:fontFamily="@font/scope_one"
        android:text="@string/chinese_zodiac"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:calendarTextColor="@color/black"
            android:headerBackground="#000000"
            android:maxDate="12/31/2023"
            android:minDate="01/01/2000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="219dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/viewZodiac"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/view_zodiac"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>